--- a/Sakila-Core.ipynb
+++ b/Sakila-Core.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Create connection string using credentials following this format\n",
     "# connection = \"dialect+driver://username:password@host:port/database\"\n",
-    "connection = \"mysql+pymysql://root:root@localhost/sakila\"\n",
+    "connection = \"mysql+pymysql://root:****@localhost/sakila\"\n",
     "\n"
    ]
   },
